// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render properly 1`] = `
<div>
  <h1
    class="css-1c2npbj"
  />
</div>
`;

exports[`<Header /> should render properly with data 1`] = `
<div>
  <h1
    class="css-1c2npbj"
  >
    Some test header
  </h1>
</div>
`;
